@@ -1,78 +1,0 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>ClarinAngular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="assets/fonts/Material_Icons.css" rel="stylesheet" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/fonts/Material_Icons.css"></noscript>
-  <style type="text/css">@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v97/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;font-feature-settings:'liga';}@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v97/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
-  <style type="text/css">
-  .global-loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    opacity: 1;
-    transition: opacity .5s ease-in-out;
-  }
-
-  .global-loader-fade-in {
-    opacity: 0;
-  }
-
-  .global-loader-hidden {
-    display: none;
-  }
-
-  .global-loader h1 {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-    font-weight: normal;
-    font-size: 24px;
-    letter-spacing: .04rem;
-    white-space: pre;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image:
-      repeating-linear-gradient(
-        to right,
-        #f44336,
-        #9c27b0,
-        #3f51b5,
-        #03a9f4,
-        #009688,
-        #8bc34a,
-        #ffeb3b,
-        #ff9800
-      );
-    background-size: 750% auto;
-    background-position: 0 100%;
-    animation: gradient 20s infinite;
-    animation-fill-mode: forwards;
-    animation-timing-function: linear;
-  }
-
-  @keyframes gradient {
-    0% {
-      background-position: 0 0;
-    }
-
-    100% {
-      background-position: -750% 0;
-    }
-  }
-  </style>
-<style>@charset "UTF-8";.mat-typography h1{font:400 24px/32px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal;margin:0 0 16px;}:root{--bs-blue:#0d6efd;--bs-indigo:#6610f2;--bs-purple:#6f42c1;--bs-pink:#d63384;--bs-red:#dc3545;--bs-orange:#fd7e14;--bs-yellow:#ffc107;--bs-green:#198754;--bs-teal:#20c997;--bs-cyan:#0dcaf0;--bs-white:#fff;--bs-gray:#6c757d;--bs-gray-dark:#343a40;--bs-gray-100:#f8f9fa;--bs-gray-200:#e9ecef;--bs-gray-300:#dee2e6;--bs-gray-400:#ced4da;--bs-gray-500:#adb5bd;--bs-gray-600:#6c757d;--bs-gray-700:#495057;--bs-gray-800:#343a40;--bs-gray-900:#212529;--bs-primary:#0d6efd;--bs-secondary:#6c757d;--bs-success:#198754;--bs-info:#0dcaf0;--bs-warning:#ffc107;--bs-danger:#dc3545;--bs-light:#f8f9fa;--bs-dark:#212529;--bs-primary-rgb:13,110,253;--bs-secondary-rgb:108,117,125;--bs-success-rgb:25,135,84;--bs-info-rgb:13,202,240;--bs-warning-rgb:255,193,7;--bs-danger-rgb:220,53,69;--bs-light-rgb:248,249,250;--bs-dark-rgb:33,37,41;--bs-white-rgb:255,255,255;--bs-black-rgb:0,0,0;--bs-body-rgb:33,37,41;--bs-font-sans-serif:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";--bs-font-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;--bs-gradient:linear-gradient(180deg,hsla(0,0%,100%,0.15),hsla(0,0%,100%,0));--bs-body-font-family:var(--bs-font-sans-serif);--bs-body-font-size:1rem;--bs-body-font-weight:400;--bs-body-line-height:1.5;--bs-body-color:#212529;--bs-body-bg:#fff;}@media (prefers-reduced-motion: no-preference){:root{scroll-behavior:smooth;}}body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;font-family:var(--bs-body-font-family);font-size:1rem;font-size:var(--bs-body-font-size);font-weight:400;font-weight:var(--bs-body-font-weight);line-height:1.5;line-height:var(--bs-body-line-height);color:#212529;color:var(--bs-body-color);text-align:var(--bs-body-text-align);background-color:#fff;background-color:var(--bs-body-bg);-webkit-tap-highlight-color:rgba(0,0,0,0);}h1{margin-top:0;margin-bottom:.5rem;font-weight:500;line-height:1.2;}h1{font-size:calc(1.375rem + 1.5vw);}@media (min-width: 1200px){h1{font-size:2.5rem;}}body{margin:0;line-height:normal;font-family:Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;}body,html{position:relative;height:100%;overflow:auto;}*,:after,:before{box-sizing:border-box;}.mat-typography h1{font:400 24px/32px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal;margin:0 0 16px;}.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal;}</style><link rel="stylesheet" href="static/styles.0cf7a37fe4bf5071cb19.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="static/styles.0cf7a37fe4bf5071cb19.css"></noscript></head>
-<body class="mat-typography">
-  <app-root></app-root>
-  <div id="globalLoader" class="global-loader"><h1>LOADING</h1></div>
-<script src="static/runtime-es2015.2532ca3196de09479c21.js" type="module"></script><script src="static/runtime-es5.2532ca3196de09479c21.js" nomodule defer></script><script src="static/polyfills-es5.51c1ec8c65135ac6b4d0.js" nomodule defer></script><script src="static/polyfills-es2015.45a4737ecaae78c3a1c9.js" type="module"></script><script src="static/scripts.56d6380d21d11c8127ef.js" defer></script><script src="static/main-es2015.fc3defd7d038233de799.js" type="module"></script><script src="static/main-es5.fc3defd7d038233de799.js" nomodule defer></script>
-
-</body></html>
